--- a/src/components/LandingHero-2.astro
+++ b/src/components/LandingHero-2.astro
@@ -18,7 +18,7 @@ const base = import.meta.env.BASE_URL;
 </div>
 <div class="container text-left mb-32 relative z-10">
 	<h1 class="text-3xl md:text-4xl lg:text-5xl font-bold leading-tight">
-		{owner} Photography
+		{owner} Portafolio
 	</h1>
 	<p class="mt-4 text-base md:text-lg text-gray-700">A place to showcase my photography</p>
 	<a
@@ -28,6 +28,6 @@ const base = import.meta.env.BASE_URL;
                       text-sm md:text-base font-medium
                       transform hover:scale-105 active:scale-95"
 	>
-		View Gallery
+		Presentación
 	</a>
 </div>
